feat: producer crud
