# src/modules/producer/dto/create-producer.dto.ts
@@ -1,0 +1,12 @@
+import { IsNotEmpty, IsString, Length } from 'class-validator';
+
+export class CreateProducerDto {
+  @IsNotEmpty()
+  @IsString()
+  @Length(11, 14)
+  governmentIssuedId: string;
+
+  @IsNotEmpty()
+  @IsString()
+  name: string;
+}
