# src/modules/producer/dto/update-producer.dto.ts
@@ -1,0 +1,6 @@
+import { CreateProducerDto } from './create-producer.dto';
+import { OmitType } from '@nestjs/swagger';
+
+export class UpdateProducerDto extends OmitType(CreateProducerDto, [
+  'governmentIssuedId',
+] as const) {}
