# src/modules/user/user.entity.ts
@@ -1,5 +1,6 @@
-import { Column, Entity } from 'typeorm';
+import { Column, Entity, OneToMany } from 'typeorm';
 import { BaseEntity } from 'src/core/baseEntity';
+import { ProducerEntity } from 'src/modules/producer/producer.entity';
 
 export enum USER_ROLE {
   STAFF = 'STAFF',
@@ -19,4 +20,7 @@ export class UserEntity extends BaseEntity {
 
   @Column('enum', { enum: USER_ROLE, default: USER_ROLE.USER })
   role: USER_ROLE;
+
+  @OneToMany(() => ProducerEntity, (producer) => producer.user)
+  producers: ProducerEntity[];
 }
